--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 PORT="4000"
 
-DB_HOST=""
-DB_PORT=""
-DB_USER=""
-DB_PASSWORD=""
-DB_DATABASE=""
+DB_HOST="r7ddbsrv.database.windows.net"
+DB_PORT="1433"
+DB_USER="r7dadmin"
+DB_PASSWORD="B1llpwd!"
+DB_DATABASE="afterhills"
 
 KNEX_LOGGING=true
 KNEX_DEBUG=false
